# md-pastebin

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: handlers.rs  main.rs  models.rs  storage.rs
frontend/: Dockerfile  bun.lockb  package.json
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/p/[id]/: page.tsx
frontend/src/components/: MarkdownPastebin.tsx  PastebinClientWrapper.tsx
frontend/src/components/markdown/: CodeBlock.tsx
frontend/src/config/: api.ts
nginx/conf.d/: default.conf
