[package]
name = "md-pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
redis = { version = "0.23", features = ["tokio-comp"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
